--- a/facial_recognition/requirements.txt
+++ b/facial_recognition/requirements.txt
@@ -1,22 +1,36 @@
 absl-py==0.9.0
 astor==0.8.1
+certifi==2020.4.5.1
+chardet==3.0.4
+colorama==0.4.3
+future==0.18.2
 gast==0.3.3
 google-pasta==0.2.0
 grpcio==1.28.1
 h5py==2.10.0
+idna==2.9
+joblib==0.14.1
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
+keras-tuner==1.0.1
 Markdown==3.2.1
 numpy==1.16.4
 opencv-python==4.2.0.34
 Pillow==7.1.1
 pkg-resources==0.0.0
 protobuf==3.11.3
+requests==2.23.0
+scikit-learn==0.22.2.post1
+scipy==1.4.1
 six==1.14.0
+tabulate==0.8.7
 tensorboard==1.14.0
 tensorflow==1.14.0
 tensorflow-estimator==1.14.0
 termcolor==1.1.0
+terminaltables==3.1.0
 tflearn==0.3.2
+tqdm==4.45.0
+urllib3==1.25.9
 Werkzeug==1.0.1
 wrapt==1.12.1
